Split the documentation by reader and say what JBangLite is not
The README was 377 lines that mixed four audiences: a tool's author, the
people who run the tool, whoever maintains the fork, and a record of the
decisions taken along the way. It now addresses the first two, leads with what
a reader gets rather than with what was removed from JBang, and its quick
start is two commands for the author and none for everyone else.

docs/DEVELOPMENT.md takes the rest: building, releasing, the upstream sync,
CI, how a run works, how the jar gets JDKs, and why the packages are
dev.jbang. The development history is gone from both: how JBangLite came to
differ from JBang is not something a reader of either needs.

dist/README.md, which lands in somebody else's repository, is now about their
project and not about this one.

README.md and THIRD-PARTY.md both state that JBangLite is not affiliated with,
endorsed by, or supported by the JBang project.

Fixed along the way: the option and directive tables listed what no longer
exists, the environment table was missing half the variables, the JDK search
order was given in the wrong order, "the launcher sets nothing in the
environment" was untrue, and the size of an installation was quoted from two
versions ago.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01R3xSSwJLoriFc3sgc2RgkR